# sample-rust-apps

./: COPYRIGHT  Cargo.toml  LICENSE-MIT
.github/workflows/: ci.yml
binlog-practice/: Cargo.toml
binlog-practice/src/: main.rs
csv-practice/: Cargo.toml
csv-practice/src/: main.rs
dotenvy-practice/: Cargo.toml
dummy-ok-server/: Cargo.toml  dummy-ok-server.service
dummy-ok-server/src/: main.rs
encode-practice/: Cargo.toml
encode-practice/src/: main.rs
jwt-practice/: Cargo.toml
jwt-practice/src/: main.rs
opengl-practice/: Cargo.toml  README.md
opengl-practice/src/: main.rs
poem-practice/: Cargo.toml
poem-practice/src/: main.rs
ratatui-practice/: Cargo.toml
ratatui-practice/src/: main.rs
sqlx-practice/: Cargo.toml
src/: main.rs
