[package]
name = "poem-practice"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
poem = "3.0.1"
poem-openapi = { version = "5.0.2", features = ["swagger-ui"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
